--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy proxy.conf.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -26,6 +26,7 @@
     "hammerjs": "^2.0.8",
     "ngx-bootstrap": "^1.6.6",
     "rxjs": "^5.1.0",
+    "ts-md5": "^1.2.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
